<resources>
    <string name="app_name">Guerreiros de Cristo</string>
    <string name="iniciarsessao">Iniciar Sessão</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="registre">Primeiro acesso?</string>
    <string name="esqueci">Esqueceu sua senha?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="user">Usuário</string>
    <string name="conf_senha">Confirmar Senha</string>
    <string name="user_id">userID</string>
    <string name="title_activity_guerreiros">GuerreirosActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continuar">Continuar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="rg">RG</string>
    <string name="dd">dd/mm/yyyy</string>
    <string name="data">Data de Nascimento</string>
    <string name="cpf">CPF</string>
    <string name="endereco">Endereco</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="uf">UF</string>
    <string name="cidade">Cidade</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="registro">Registro n º</string>
    <string name="peso">Peso (Kg)</string>
    <string name="jiujtsu">Jiu Jitsu</string>
    <string name="funcional">Funcional</string>
    <string name="inicio">Início em</string>
    <string name="isento">Isento de Pagamento</string>
    <string name="datagraduacao">Data Graduação</string>
    <string name="Adicionar">Adicionar</string>
    <string name="action_close">Fechar</string>
    <string name="professor">Professor</string>
    <string name="action_delete">Delete</string>

    <string-array name="ufs">
        <item>Selecione UF</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string-array name="graus">
        <item>Selecione</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
