<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:theme="@style/LoginTheme"
    tools:context="com.leandro.guerreirosapp.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/logo_white"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_email"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_edit_email"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/edit_senha"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/iniciarsessao"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="25dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="25dp"
        android:onClick="login"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/registre"
        android:onClick="cadastrar"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="-96dp" />

    <TextView
        android:id="@+id/txtEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
