<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:theme="@style/LoginTheme"
    tools:context="com.leandro.guerreirosapp.Activities.LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_toolbar">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_cep"
               >

                <EditText
                    android:id="@+id/edit_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_end"
                >

                <EditText
                    android:id="@+id/edit_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_compl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_num"
               >

                <EditText
                    android:id="@+id/edit_compl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/complemento"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_compl">

                <EditText
                    android:id="@+id/edit_bairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_bairro">

                <EditText
                    android:id="@+id/edit_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/selecione_uf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_cidade"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:text="Selecione o Estado"

                />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/uf_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selecione_uf"
                android:entries="@array/ufs"
                android:fontFamily="sans-serif-medium"
                tools:listitem="@layout/support_simple_spinner_dropdown_item"
                app:ms_dropdown_max_height="250dp"
                />


            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/uf_spinner"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:onClick="cadastrar"
                android:text="@string/continuar"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>
