<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:theme="@style/LoginTheme"
    tools:context="com.leandro.guerreirosapp.Activities.LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <EditText
                    android:id="@+id/edit_nome"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_nasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/layout_edit_nome"
                >

                <EditText
                    android:id="@+id/edit_nasc"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/data" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edit_nasc"
                android:text="Sexo: "
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/txt_sexo"
                />

        <RadioGroup
            android:id="@+id/rdg_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/txt_sexo">
            <RadioButton
                android:id="@+id/rdMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"

                android:checked="true"
                android:textSize="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                 />

            <RadioButton
                android:id="@+id/rdFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/rdMasculino"
                android:text="F"
                android:textSize="16dp" />
        </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rdg_sexo"
                android:id="@+id/layout_edit_email">

                <EditText
                    android:id="@+id/edit_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit_email"
                >

                <EditText
                    android:id="@+id/edit_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="text|number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edit_telefone">

                <EditText
                    android:id="@+id/edit_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg"
                    android:inputType="text|number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_edit_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edit_rg">

                <EditText
                    android:id="@+id/edit_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:inputType="text|number" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/continuar"
                android:onClick="cadastrar"
                android:layout_below="@id/layout_edit_cpf"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
